# SameSame

./: .gitignore  LICENSE  README.md  dedupe.py  pyproject.toml
dedupe/: __init__.py  audio_fingerprint.py  benchmark.py  cache.py  cli.py  consolidation.py  events.py  exact_hash.py  folder_compare.py  image_fingerprint.py  metadata.py  models.py  name_normalizer.py  progress.py  report.py  scanner.py  service.py  thresholds.py  video_fingerprint.py
dedupe/actions/: __init__.py  journal.py  models.py  preflight.py  service.py
dedupe/gui/: __init__.py  app.py  compression_tab.py  consolidation_tab.py  journal_dialog.py  main_window.py  preview.py  result_items.py  transcode_dialog.py  worker.py
dedupe/transcode/: __init__.py  capabilities.py  cli.py  command_builder.py  models.py  presets.py  probe.py  promotion.py  queue.py  runner.py  source_cleanup.py  validation.py
docs/: ANIME_ENCODING_PRESETS.md  AUDIT.md  CONFIG.md  GUI_REFERENCE.md  ROADMAP.md  STATUS.md  THRESHOLDS.md  USAGE.md  samesame.example.json  threshold-baseline.json  threshold-manifest.example.json
tests/: test_actions.py  test_audio_integration.py  test_consolidation.py  test_core.py  test_gui.py  test_images.py  test_service.py  test_thresholds.py  test_transcode.py  test_transcode_integration.py  test_transcode_promotion.py  test_video_integration.py
tools/: benchmark_thresholds.py
