[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "samesame"
version = "1.5.3"
description = "CLI and optional desktop tool for finding exact and similar media files."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "StarLith" }
]
keywords = ["duplicates", "media", "video", "images", "ffmpeg", "dedupe"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Video",
  "Topic :: System :: Archiving",
  "Topic :: Utilities"
]
dependencies = [
  "anthropic>=0.39.0",
  "rapidfuzz>=3.9.0",
  "xxhash>=3.5.0",
  "Pillow>=10.4.0",
  "tqdm>=4.66.0",
  "PyYAML>=6.0.0"
]

[project.optional-dependencies]
gui = [
  "PySide6>=6.8,<7"
]
dev = [
  "build>=1.2.0",
  "pytest>=8.0.0",
  "ruff>=0.6.0"
]

[project.scripts]
samesame = "dedupe.cli:main"
samesame-benchmark = "dedupe.benchmark:main"
samesame-gui = "dedupe.gui.app:main"

[tool.setuptools.packages.find]
include = ["dedupe*"]

[tool.ruff]
line-length = 120
target-version = "py311"

